--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -38,7 +38,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="/voice">
                     <i class="fas fa-assistive-listening-systems"></i>
-                    <span>녹음 - 준오 작업중</span></a>
+                    <span>녹음</span></a>
             </li>
 
             
