--- a/views/testamInfo.ejs
+++ b/views/testamInfo.ejs
@@ -1,80 +1,94 @@
-<!-- Page Heading -->
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-            class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
-</div>
-
+<!-- 로그인 여부 판단 -->
 <% if (Object.values(sess).length === 0) {%>
-    <p>로그인이 되어있지 않습니다.</p>
-    <p>로그인 후 데이터를 가져올 수 있습니다.</p>
+    <div style="width: 100%; height: 600px; justify-content: center; align-items: center; display: flex; text-align: center;">
+        <p>로그인이 되어있지 않습니다.<br>로그인 후 데이터를 가져올 수 있습니다.</p>
+    </div>
 <% } else {%>
-    <!-- <table border="1">
-        <colgroup>
-            <col width="50px" />
-            <col width="150px" />
-            <col width="400px" />
-        </colgroups>
-        <% for (var row of data) { %> 
-        <tr>
-            <td><%= row.id %></td>
-            <td><%= row.title %></td>
-            <td><%= row.content %></td>
-        </tr>
-        <% } %> 
-    </table> -->
-    
-    <!-- 유서 Chart -->
+    <!-- 유서 리스트 -->
     <div class="row" id="testamentView">
     <% if (data.length > 0) {%>
+        <!-- 유서 헤더  -->
         <div class="col-12">
-            <h3 class="mb-3"> <%= sess.email %>님의 유서</h3>
-            <% data.forEach(idea => {%>
-                <div class="card card-body mb-2" style="width:50%; box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15)!important; border-radius: .35rem;">
-                <h4><%= idea.title %></h4>
-                <p><%= idea.details %></p>
-                <a href="/testam/edit/<%= idea._id %>" class="btn btn-dark btn-block shadow  mb-2" style="width: 20%; background-color: #0969c9; border: 0px;">수정</a>
-                <form method="post" action="testam/<%= idea._id %>?_method=DELETE">
-                    <input type="hidden" name="_method" value="DELETE">
-                    <input type="submit" class="btn btn-danger btn-block" value="삭제" style="width: 20%; background-color: #0969c9;  border: 0px;">
-                </form>
+            <div
+                class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h3 class="mb-3"> <%= sess.email %>님의 유서</h3>
+                <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                    </a>
+
+                    <!-- 드롭다운 수정/삭제 -->
+                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" style="font-size: 16px; 
+                                text-align: center;" aria-labelledby="dropdownMenuLink">
+                        <a class="dropdown-item" href="#" onclick="event.preventDefault()" id="btnModify">수정하기</a>
+                        <form action="/testam/delete" method="POST">
+                            <button type="submit" class="dropdown-item">삭제하기</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 유서 입력 -->
+            <% data.forEach(testam => {%>
+                <div class="card card-body mb-2" style="width: 70%; height: 700px; max-height: 1360px; margin-top: 2%;
+                box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15)!important;border-radius: .35rem; margin-left: 15%; padding: 50px;">
+                    <h4>
+                        <span id="testamentTitle"><%= testam.title %></span>
+                    </h4>
+                    <p id="testamentContent" style="margin-top: 30px;"><%= testam.content %></p>
                 </div>
             <% }); %>
-    
-        </ul>
+
         </div>
-    <% } else { %>
-        <div class="text-center" style="margin:100px auto;">
-            <h3>생성된 유서가 없습니다.</h3>
-            <button class="d-none d-lg-inline-block btn btn-lg btn-primary shadow-lg" id="btnCreateTestam"><i
-            class="fas fa-plus fa-lg text-white-50"></i> 유서작성하기</button>
-        </div>
-    <% } %>
+
+            <% } else { %>
+                <!-- 생성된 유서 없을 경우 -->
+                <div class="text-center" style="margin:230px auto;">
+                    <h3>생성된 유서가 없습니다.</h3>
+                    <button class="d-lg-inline-block btn btn-lg btn-primary shadow-lg" id="btnCreateTestam" style="border-radius: 50px;margin-top:  30px;padding: 15px 30px;background: linear-gradient(to top, #244bbf, #7368cc);"><i
+                    class="fas fa-plus fa-lg text-white-50" ></i> 유서작성하기</button>
+                </div>
+            <% } %>
     </div>
  
+    <!-- 유서 수정 -->
     <div id="testamentModify" style="display:none;">
-        <form action="/testam/sqlInsert" method="POST">
+        <form action="/testam/sqlInsert" method="POST" style="width:  80%; margin-left: 11%;">
             <div class="form-group">
-                <label for="title">Title</label>
-                <input type="text" class="form-control" name="title">
+                <input type="text" class="form-control" name="title" style="font-size: 25px; margin-top: 8%; 
+                box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.08)!important;" placeholder="제목">
             </div>
             <div class="form-group">
-                <label for="title">Details</label>
-                <textarea class="form-control" name="content"></textarea>
+                <textarea class="form-control" name="content" style="white-space: pre-line; height: 480px; padding: 20px; 
+                box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.08)!important;"  placeholder="내용을 입력해주세요. (4500 byte)"></textarea>
             </div>
-            <button class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" id="btnViewTestament"><i
-                class="fas fa-plus fa-lg text-white-50"></i> 뒤로가기</button>
-            <button type="submit" class="btn btn-primary">저장하기</submit>        
+            <div class="testam-btn" style="float:right;">
+            <button class="d-sm-inline-block btn btn-sm btn-primary shadow-sm" id="btnViewTestament">뒤로가기</button>
+            <button type="submit" class="btn btn-primary">저장하기</submit>       
+            </div> 
         </form>
-
     </div>
-<%
-} %> 
+<%} %> 
 
+
+<!-- 스크립트 -->
 <script type="text/javascript">
 $(document).ready(function(){
     //유서작성하기 버튼 클릭
     $("#btnCreateTestam").click(function(){
+        viewModify();
+    });
+
+    
+    $("#btnModify").click(function(){
+        //수정 Title 가져오기
+        console.log($("#testamentTitle").html(), '$("#testamentTitle").html()');
+        $("#testamentModify").find("[name='title']").val($("#testamentTitle").html());
+        
+        //수정내용 가져오기
+        $("#testamentModify").find("[name='content']").html($("#testamentContent").html());
+        
         viewModify();
     });
 
@@ -96,3 +110,4 @@ $(document).ready(function(){
     }
 });
 </script>
+
