--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -26,27 +26,19 @@
                 게시판
             </div>
 
-            <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="/">
-                    <i class="far fa-comment-dots"></i>
-                    <span>유언</span></a>
-            </li>
-
             
-            <!-- Nav Item - Charts -->
+            <!-- 유언 -->
             <li class="nav-item">
                 <a class="nav-link" href="/voice">
                     <i class="fas fa-assistive-listening-systems"></i>
-                    <span>녹음</span></a>
+                    <span>유언 녹음</span></a>
             </li>
-
             
             <!-- Nav Item - Charts -->
             <li class="nav-item">
                 <a class="nav-link" href="/testam">
                     <i class="far fa-copy"></i>
-                    <span>유서</span></a>
+                    <span>유서 작성</span></a>
             </li>
 
 
