유서 엔터값처리

--- a/views/testament/testamInfo.ejs
+++ b/views/testament/testamInfo.ejs
@@ -36,7 +36,8 @@
                     <h4>
                         <span id="testamentTitle"><%= testam.title %></span>
                     </h4>
-                    <p id="testamentContent" style="margin-top: 30px;"><%= testam.content %></p>
+
+                    <p id="testamentContent" style="margin-top: 30px;"><pre><%= testam.content; %></pre></p>
                 </div>
             <% }); %>
 
