--- a/views/voice/voiceContentInfo.ejs
+++ b/views/voice/voiceContentInfo.ejs
@@ -4,7 +4,7 @@
     %>
     <!-- Main Content -->
     <div id="content">
-        <form  name="voice_content" method="get">
+        <form  name="voice_content" method="POST">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
