--- a/views/testament/testamInfo.ejs
+++ b/views/testament/testamInfo.ejs
@@ -37,7 +37,9 @@
                         <span id="testamentTitle"><%= testam.title %></span>
                     </h4>
 
-                    <p id="testamentContent" style="margin-top: 30px;"><pre><%= testam.content; %></pre></p>
+                    <p id="testamentContent" style="margin-top: 30px;">
+                        <%= testam.content; %>
+                    </p>
                 </div>
             <% }); %>
 
