--- a/views/testament/testamInfo.ejs
+++ b/views/testament/testamInfo.ejs
@@ -37,8 +37,8 @@
                         <span id="testamentTitle"><%= testam.title %></span>
                     </h4>
 
-                    <p id="testamentContent" style="margin-top: 30px;">
-                        <%= testam.content; %>
+                    <p style="margin-top: 30px;">
+                        <pre id="testamentContent"><%= testam.content; %></pre>
                     </p>
                 </div>
             <% }); %>
