--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
 
 <div class="container my-auto">
     <div class="copyright text-center my-auto">
-        <span>Copyright &copy; Your Website 2021</span>
+        <span>Copyright &copy; MyRecord - dy 2021</span>
     </div>
 </div>
